cv7/cv7/parser4.output
Grammar

    0 $accept: S $end

    1 S: A B

    2 A: 'a' 'h'
    3  | 'a' 'b' A 'c'
    4  | 'a' B 'c'

    5 B: C D E

    6 C: 'd'
    7  | 'e'

    8 D: 'f' D
    9  | 'f'

   10 E: B
   11  | 'g'


Terminals, with rules where they appear

$end (0) 0
'a' (97) 2 3 4
'b' (98) 3
'c' (99) 3 4
'd' (100) 6
'e' (101) 7
'f' (102) 8 9
'g' (103) 11
'h' (104) 2
error (256)


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
S (12)
    on left: 1, on right: 0
A (13)
    on left: 2 3 4, on right: 1 3
B (14)
    on left: 5, on right: 1 4 10
C (15)
    on left: 6 7, on right: 5
D (16)
    on left: 8 9, on right: 5 8
E (17)
    on left: 10 11, on right: 5


State 0

    0 $accept: . S $end

    'a'  shift, and go to state 1

    S  go to state 2
    A  go to state 3


State 1

    2 A: 'a' . 'h'
    3  | 'a' . 'b' A 'c'
    4  | 'a' . B 'c'

    'h'  shift, and go to state 4
    'b'  shift, and go to state 5
    'd'  shift, and go to state 6
    'e'  shift, and go to state 7

    B  go to state 8
    C  go to state 9


State 2

    0 $accept: S . $end

    $end  shift, and go to state 10


State 3

    1 S: A . B

    'd'  shift, and go to state 6
    'e'  shift, and go to state 7

    B  go to state 11
    C  go to state 9


State 4

    2 A: 'a' 'h' .

    $default  reduce using rule 2 (A)


State 5

    3 A: 'a' 'b' . A 'c'

    'a'  shift, and go to state 1

    A  go to state 12


State 6

    6 C: 'd' .

    $default  reduce using rule 6 (C)


State 7

    7 C: 'e' .

    $default  reduce using rule 7 (C)


State 8

    4 A: 'a' B . 'c'

    'c'  shift, and go to state 13


State 9

    5 B: C . D E

    'f'  shift, and go to state 14

    D  go to state 15


State 10

    0 $accept: S $end .

    $default  accept


State 11

    1 S: A B .

    $default  reduce using rule 1 (S)


State 12

    3 A: 'a' 'b' A . 'c'

    'c'  shift, and go to state 16


State 13

    4 A: 'a' B 'c' .

    $default  reduce using rule 4 (A)


State 14

    8 D: 'f' . D
    9  | 'f' .

    'f'  shift, and go to state 14

    $default  reduce using rule 9 (D)

    D  go to state 17


State 15

    5 B: C D . E

    'd'  shift, and go to state 6
    'e'  shift, and go to state 7
    'g'  shift, and go to state 18

    B  go to state 19
    C  go to state 9
    E  go to state 20


State 16

    3 A: 'a' 'b' A 'c' .

    $default  reduce using rule 3 (A)


State 17

    8 D: 'f' D .

    $default  reduce using rule 8 (D)


State 18

   11 E: 'g' .

    $default  reduce using rule 11 (E)


State 19

   10 E: B .

    $default  reduce using rule 10 (E)


State 20

    5 B: C D E .

    $default  reduce using rule 5 (B)
